<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FEFFFF"
    android:padding="50dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivAyang"
        android:layout_width="match_parent"
        android:layout_height="286dp"
        android:src="@drawable/ayang" />

    <EditText
        android:drawableStart="@drawable/ic_username"
        android:id="@+id/etUsername"
        android:onClick="clickusername"
        android:hint="@string/username"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:drawableStart="@drawable/ic_password"
        android:drawableEnd="@drawable/ic_show"
        android:id="@+id/etPassword"
        android:onClick="clickpassword"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:onClick="clicklogin"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:id="@+id/tvForgotPassword"
        android:text="@string/forgot_password"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="clickforgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/create_a_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>